# Assistly

.github/workflows/: agent-assistify-concierge-build.yml  agent-assistify-product-owner-build.yml  agent-assistify-product-owner-repeat-integration-tests.yml  ci-audit.yml  continuous-integration.yml  end-to-end-integration.yml  fly-deploy.yml  vercel-deploy.yml
agents/: README.md
agents/assistify-concierge/: .env.default  .gitignore  README.md  data_exporter.py  pyproject.toml
agents/assistify-concierge/data/Assistify Status Trello Board/: 000 Assistify Trello Status BACKLOG.txt
agents/assistify-concierge/data/files/: Assistify Concierge README.txt  Assistify Product Definition.txt  Assistify Release v0-0-1.txt
agents/assistify-concierge/data/files/code/: ai-assistant-manager.txt  assistify-api.txt  assistify-concierge.txt  assistify-github-workflows.txt
agents/assistify-concierge/integration/: conftest.py  run_chat_test.py
agents/assistify-concierge/prompts/: prompt.md
agents/assistify-product-owner/: .env.default  AI-XP Product Owner Product Definition.md  README.md  data_exporter.py  pyproject.toml  run_chat.py  run_code_summary.py  run_trello_extract.py  run_trello_view_labels.py
agents/assistify-product-owner/data/Assistify Status Trello Board/: 001 Assistify Trello Status DOING.txt
agents/assistify-product-owner/data/files/: Assistify Product Development Priorities.txt  Assistify Product Owner README.txt  Assistify Release - Detailed.txt  Assistify Release - Trello Status v0-0-1.txt  Assistify Trello Board Labels.txt
agents/assistify-product-owner/data/files/code/: ai-assistant-manager.txt  assistify-ui.txt
agents/assistify-product-owner/integration/: conftest.py  run_chat_test.py
agents/assistify-product-owner/prompts/: prompt.md
agents/assistify-product-owner/tools/: tools.json
agents/warm-intro-ai/: .env.default  .gitignore  README.md  data_exporter.py  pyproject.toml  run_end_to_end.py
agents/warm-intro-ai/data/files/: Warm Intro AI Product Definition.txt
agents/warm-intro-ai/prompts/: prompt.md
assistify-api/: .dockerignore  .env.default  .env.test  Dockerfile  README.md  fly.toml  pyproject.toml  server.py
assistify-api/assistify_api/: conftest.py  env_variables.py  env_variables_test.py
assistify-api/assistify_api/app/: api.py  api_test.py  lifespan.py
assistify-api/assistify_api/app/assistants/: assistants_router.py  assistants_router_test.py  assistants_service.py  assistants_service_test.py  available_assistants.py  list_assistants_response.py
assistify-api/assistify_api/app/auth/: verify_token.py  verify_token_test.py
assistify-api/assistify_api/app/cors/: custom_cors_middleware.py  custom_cors_middleware_test.py
assistify-api/assistify_api/app/dependencies/: api_dependencies.py  api_dependencies_test.py
assistify-api/assistify_api/app/messages/: messages_router.py  messages_router_test.py  messages_service.py  messages_service_test.py  send_message.py
assistify-api/assistify_api/app/threads/: thread.py  threads_router.py  threads_router_test.py  threads_service.py  threads_service_test.py
assistify-api/assistify_api/app/users/: users_response.py  users_router.py  users_router_test.py  users_service.py  users_service_test.py
assistify-api/assistify_api/database/: handle_migrations.py  mongodb.py  mongodb_test.py  version_control_wrapper.py  version_control_wrapper_test.py
assistify-api/assistify_api/database/dao/: assistants_dao.py  assistants_dao_test.py  conftest.py  dao.py  dao_test.py  threads_dao.py  threads_dao_test.py  users_dao.py  users_dao_test.py  version_dao.py  version_dao_test.py
assistify-api/assistify_api/database/migrations/: v001_add_assistants.py  v003_add_and_update_assistants.py  v004_update_assistants.py
assistify-api/assistify_api/database/models/: assistant.py  base.py  message.py  model.py  thread.py  user.py  version.py
assistify-api/assistify_api/timer/: timer_test.py
assistify-ui/src/hooks/: useAuthRedirect.ts  useMobile.ts  useTokenRefresh.ts
assistify-ui/src/services/: axiosInstance.ts  axiosInstants.test.tsx  lastThread.ts  messages.ts  service.ts  useFetchAssistants.test.ts  useFetchAssistants.ts  useNewThread.ts  users.test.ts  users.ts
assistify-ui/src/styles/: globals.css  theme.ts
