[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistify-concierge"

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-assistant-manager==2.0.0",
    "ai-code-summary==0.1.0",
    "ai-trello-extract==0.0.7",
    "loguru",
    "openai",
    "python-dateutil",
    "python-dotenv",
]

[tool.hatch.version]
path = "setup.cfg"
pattern = "version = (?P<version>\\S+)"

[tool.hatch.build.targets.sdist]
include = ["/assistify_product_owner"]

[tool.hatch.build.targets.wheel]
packages = ["assistify_product_owner"]

[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
dependencies = ["pyright", "pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
chat = "python run_chat.py"
build = "python run_end_to_end.py"
e2e = "python run_end_to_end.py --delete-assistant"
summary = "python run_code_summary.py {args}"
trello-extract = "python run_trello_extract.py"
test = "pytest --cache-clear --cov --cov-report lcov --cov-report term -m 'not integration'"
test-integration = "pytest --cache-clear --cov --cov-report lcov --cov-report term"
test-repeat = "pytest -m integration -s"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"
